tests/lustre/typechecking/shouldFail/test_automaton_circular.lus
-- ------------------------------------------------------------
-- Automaton
-- ------------------------------------------------------------

node Aut (cond0 : bool; cond1 : bool; in : int) returns (o : int)
let
  automaton
    state ST1:
    var k: int;
    let
      k = o + 1;
      o = k + 1; -- Circular dependency
    tel
    until if cond1 resume ST0 ;

    initial state ST0: 
    unless if cond0 restart ST1;
    var k: int;
    let
     k = if in < 0 then -in else in;
     o = k + 1;
    tel
 returns o;
tel